[package]
name = "ppppp-account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppppp-base58 = { path = "../base58" }
ed25519-dalek = "2.0.0"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
