[package]
name = "ppppp-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppppp-base58 = { path = "../base58" }
ppppp-bytes = { path = "../bytes" }
blake3 = "1.5.0"
ed25519-dalek = { version = "2.0.0", features = ["zeroize", "rand_core"] }
serde = "1.0.192"
thiserror = "1.0.50"
zerocopy = { version = "0.7.25", features = ["derive"] }
zeroize = { version = "1.6.0", features = ["derive"] }
getter-methods = "1.0.0"
