[package]
name = "ppppp-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppppp-base58 = { path = "../base58" }
ppppp-bytes = { path = "../bytes" }
blake3 = "1.5.0"
ed25519-dalek = { version = "2.1.0", features = ["zeroize", "rand_core"] }
serde = "1.0.192"
thiserror = "1.0.50"
getter-methods = "1.0.0"
