[package]
name = "ppppp-msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppppp-base58 = { path = "../base58" }
ppppp-crypto = { path = "../crypto" }
getter-methods = "1.0.0"
json-canon = "0.1.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
zerocopy = { version = "0.7.25", features = ["byteorder", "derive"] }
lipmaa-link = "0.2.2"
typed-builder = "0.18.0"
