[package]
name = "ppppp-msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base-x = "0.2.11"
blake3 = "1.3.3"
ed25519-dalek = "1.0.1"
json-canon = "0.1.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
