[package]
name = "ppppp-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.29"
futures-sink = "0.3.29"
napi = "2.13.3"
tokio = { version = "1.33.0", features = ["io-util"] }
