[package]
name = "ppppp-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
napi = { version = "2.13.3", features = ["tokio_rt"] }
tokio = { version = "1.33.0", features = ["rt", "io-util"] }
